--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: #282c34;
 }
 
 .App-logo {
@@ -14,8 +15,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  min-height: 20vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -35,4 +35,27 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.col {
+
+  /* position:relative;
+  overflow:hidden;
+  padding-bottom:100%;
+  border:none; */
+}
+
+.row {
+
+  height: 200px;
+
+}
+
+
+.container {
+  width: 600px;
+}
+.board {
+
+  padding-bottom: 100px;
 }
