Implement color line on Game Over

--- a/src/App.css
+++ b/src/App.css
@@ -64,3 +64,11 @@
   background-color: #007bff !important;
   cursor: default !important;
 }
+
+.btnPlayerWin{
+  background-color: #28a745 !important;
+}
+
+.btnPlayerLoss{
+  background-color:  #dc3545 !important;
+}
